# braintrust-sdk

./: .env.example  .envrc  .gitignore  .gitmodules  .npmrc  .pre-commit-config.yaml  .prettierignore  .tool-versions  AGENTS.md  CLAUDE.md  CODEOWNERS  Dockerfile  EXPERIMENT_HOOKS_IMPLEMENTATION.md  Makefile  PUBLISHING_JS.md  README.md  agents.toml  docker-compose.yml  env.sh  generated_types.json  imported_types.json  knip.json  knip.jsonc  mise.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  pyrightconfig.json  queue-perf-test-py.py  queue-perf-test-ts.ts  template-version.sh  turbo.json
.claude/: settings.json
.config/: wt.toml
.github/: dependabot.yml
.husky/: post-checkout
braintrust_core/: package.json  setup.py  tsconfig.json  tsup.config.ts
codegen/: pyproject.toml
core/: README.md
docs/: ai-sdk-telemetry-integration-migration.md  span-customization-hooks-design.md
e2e/: README.md  package.json  tsconfig.json  vitest.config.mts  vitest.setup.ts
integrations/adk-py/: README.md  pyproject.toml
integrations/adk-py/.github/workflows/: test.yaml
integrations/adk-py/examples/: Makefile  README.md  hello.py  hello_eval.py  manual.py  manual_eval.py  parallel.py  pyproject.toml
integrations/adk-py/examples/mcp_tracing/: .env.example  README.md  agent.py  fastapi_mcp_example.py  pyproject.toml
integrations/adk-py/examples/multi_tool_agent/: __init__.py  agent.py
integrations/adk-py/examples/parallel/: __init__.py  agent.py
integrations/adk-py/examples/weatherman/: .gitignore  README.md  agent.py  requirements.txt
integrations/adk-py/src/braintrust_adk/: __init__.py  agent.py  callbacks.py
integrations/adk-py/src/tests/: conftest.py  test_adk.py  test_mcp_tool.py
integrations/adk-py/src/tests/cassettes/: test_adk_binary_data_attachment_conversion.yaml  test_adk_braintrust_integration.yaml  test_adk_captures_metrics.yaml  test_adk_complex_nested_schema.yaml  test_adk_input_schema_serialization.yaml  test_adk_max_tokens_captures_content.yaml  test_adk_response_json_schema_dict.yaml
integrations/adk-py/tests/: conftest.py  helpers.py  test_braintrust_adk.py
integrations/adk-py/tests/cassettes/: test_set_provider.yaml  test_unset_provider.yaml
integrations/agno/: README.md  pyproject.toml
integrations/agno/examples/: pyproject.toml  simple_agent.py  team_agent.py
integrations/agno/src/braintrust_agno/: __init__.py  agent.py  function_call.py  main.py  model.py  team.py
integrations/agno/src/braintrust_agno/wrappers/: __init__.py  agent.py  base.py  function_call.py
integrations/langchain-py/: .env.example  .gitignore  Makefile  README.md  env.sh  noxfile.py  pyproject.toml  pyrightconfig.json  setup.py
integrations/langchain-py/examples/: concurrent_eval_demo.py  eval.py  pyproject.toml
integrations/langchain-py/src/braintrust_langchain/: __init__.py  callbacks.py  context.py  version.py
integrations/langchain-py/src/tests/: conftest.py  fixtures.py  helpers.py  test_anthropic.py  test_callbacks.py  test_context.py
integrations/langchain-py/src/tests/cassettes/: test_async_langchain_invoke  test_chain_with_memory  test_concurrent_eval_with_logger  test_concurrent_eval_without_explicit_logger  test_global_handler  test_langchain_anthropic_integration  test_langgraph_state_management  test_llm_calls  test_parallel_execution  test_parent_option_precedence  test_prompt_caching_tokens  test_streaming_ttft  test_tool_usage
integrations/langchain-py/tests/: helpers.py
integrations/langchain-py/tests/wrappers/: test_langchain.py
internal/golden/: .gitignore  README.md  ai-sdk.ts  anthropic.ts  google_adk.py  google_genai.py  google_genai.ts  langchain.py  langchain.ts  openai.ts  package.json  pydantic_ai_test.py  pyproject.toml  test-openai.yaml  tsconfig.json
internal/golden/adk-py-v1/: google_adk.py  pyproject.toml
internal/golden/ai-sdk-v3/: ai-sdk.ts  out.txt  package.json  pnpm-lock.yaml
internal/golden/ai-sdk-v4/: ai-sdk.ts  package.json  pnpm-lock.yaml
internal/golden/ai-sdk-v5/: ai-sdk.ts  package.json  pnpm-lock.yaml
internal/golden/ai-sdk-v5-otel/: ai-sdk-otel.ts  package.json  pnpm-lock.yaml
internal/golden/ai-sdk-v6/: ai-sdk.ts  package.json  pnpm-lock.yaml
internal/golden/ai-sdk-v6-otel/: ai-sdk-otel.ts  package.json  pnpm-lock.yaml
internal/golden/genai-py-v1/: google_genai.py  pyproject.toml
internal/golden/langchain-js-v0/: langchain.ts  package.json
internal/golden/langchain-js-v1/: langchain.ts  package.json
internal/golden/langchain-py-v0/: langchain.py  pyproject.toml
internal/golden/langchain-py-v1/: langchain.py  pyproject.toml
internal/golden/otel/: ai-sdk.ts
internal/golden/pydantic-ai-v1/: pydantic_ai_test.py  pyproject.toml
internal/golden/runner/: README.md  attempt.ts  cli.ts  constants.ts  index.ts  normalize.ts  runner.ts  test-normalize.ts  utils.ts
internal/golden/vitest/: package.json  vitest-golden.test.ts
internal/golden/vitest-v2/: package.json  pnpm-lock.yaml  vitest-experiment.eval.ts  vitest-golden.test.ts
internal/golden/vitest-v3/: package.json  pnpm-lock.yaml  vitest-experiment.eval.ts  vitest-golden.test.ts
internal/golden/vitest-v4/: package.json  pnpm-lock.yaml  vitest-experiment.eval.ts  vitest-golden.test.ts  vitest.config.js
js/: .TEMPORAL_TODO.md  .eslintignore  .gitignore  .npmignore  .prettierignore  BUILD_MEMORY.md  CHANGELOG.md  CLAUDE.md  Makefile  PUBLISHING.md  README.md  ZOD_IMPLEMENTATION_SUMMARY.md  browser.ts  btql_schema.json  deno.json  edge-light.ts  eslint.config.mjs  eslint.config.ts  noxfile.py  package-lock.json  package.json  pnpm-lock.yaml  pnpm_no_save  temp-agent-trace.js  test-ai-sdk.mjs  test-anthropic.mjs  test-auto-instrument.mjs  tsconfig.index-check.json  tsconfig.json  tsconfig.tsbuildinfo  tsup.config.ts  turbo.json  typedoc-mintlify.json  typedoc.json  vitest.config.js  vitest.config.ts  vitest.config.zod.js  (+1 more)
js-browser/: README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts
py/examples/langsmith/: README.md  eval_example.py  pyproject.toml  tracing_example.py
(+2394 files in other folders)
