[project]
name = "golden"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "braintrust",
    "braintrust-langchain",
    "google-genai>=1.45.0",
    "langchain-anthropic>=0.3.22",
    "langchain-openai>=0.3.35",
]

[tool.uv.sources]
braintrust = { path = "../../py", editable = true }
braintrust-langchain = { path = "../../integrations/langchain-py", editable = true }
