[project]
name = "braintrust-agno-examples"
version = "0.1.0"
description = "Examples demonstrating braintrust-agno usage patterns for automatic Agno tracing"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "agno>=0.1.0",
    "braintrust-agno",
    "openai>=1.109.1",
    "python-multipart>=0.0.20",
    "yfinance>=0.2.66",
]

[tool.uv.sources]
braintrust-agno = { workspace = true }
