[project]
name = "langchain-py-v1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.14"
dependencies = [
    "braintrust",
    "braintrust-langchain",
    "langchain-anthropic>=1.3.1",
    "langchain-openai>=1.1.7",
]

[tool.uv.sources]
braintrust-langchain = { path = "../../../integrations/langchain-py", editable = true }
braintrust = { path = "../../../py", editable = true }
